apps/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: hkotel/mealie:v0.5.6
          volumeMounts:
            - mountPath: /app/data
              name: app-data
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: mealie-app-data
