apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mealie
  type: ClusterIP
