apps/mealie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-allow-lan@kubernetescrd
    cf.containeroo.ch/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.local.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 80
